--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1><b>Front</b>end developer</h1>
             <p>
               I'm frontend developer based in Croatia, I'll help you build
-              beautiful website that your users will love
+              beautiful websites that your users will love.
             </p>
             <div class="contact_box">
               <a class="sendMessage">Get in Touch</a>
