--- a/index.html
+++ b/index.html
@@ -96,7 +96,16 @@
         <div id="page3" class="about_me pages blur">
           <h1>About me<b>.</b></h1>
           <div class="introduction">
-            <p>I'm Tomislav, a front-end developer based in Croatia with 1.5 years experience in creating dynamic and responsive web applications. I specialized in HTML, CSS, JavaScript and little bit less in React, but I learning day by day. Over the past year, I have honed my skills in front-end development, focusing on writing clean and efficient code. When I'm not coding, you can find me exploring new technologies, reading up on the latest in web development, or enjoying the beautiful landscapes of Croatia.</p>
+            <p>
+              I'm Tomislav, a front-end developer based in Croatia with 1.5
+              years experience in creating dynamic and responsive web
+              applications. I specialized in HTML, CSS, JavaScript and little
+              bit less in React, but I learning day by day. Over the past year,
+              I have honed my skills in front-end development, focusing on
+              writing clean and efficient code. When I'm not coding, you can
+              find me exploring new technologies, reading up on the latest in
+              web development, or enjoying the beautiful landscapes of Croatia.
+            </p>
           </div>
           <div class="main">
             <div class="icon_language">
