--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
           </div>
           <div class="right_header">
+            <div class="loading"></div>
             <img alt="#" src="img/profile22_2.jpg" />
           </div>
         </div>
